File Name: CHANGES

01/10/2021 FASP 2.5.8:
- Add benchmark test based on SuiteSparse Matrix Market.
- Modify test/main/test.c slightly.
- Update error messages for reading files.
- Rewrite fasp_dbsr_print.
- Make a separate dir for benchmark test.
- Fix problems with icc compiler for Linux.

12/15/2020 FASP 2.5.7:
- Check trivial solution case Ax=0 for AMG cycles.
- Update cmake required version.
- Update cmake CC search list.
- Do not check for Doxygen by default.
- Add VW and WV hybrid cycles.

11/04/2020 FASP 2.5.6:
- Fix new warnings in GCC10.
- Fix unsigned long problem for INT.
- Fix debug mode.
- Update version information.

10/13/2020 FASP 2.5.5:
- Important fixes to UA AMG: handle possible divide by zero error.
- Update INT definition and test INT=int and long.
- Caution: INT cannot be short or unsigned int.
- Update other FASP repositories accordingly. 

10/03/2020 FASP 2.5.4:
- Update Windows version to VS2019 and Intel2020.1.

07/18/2020 FASP 2.5.3:
- Modify test problems.
- Skip comments in the beginning of data files.
- When reading CSR matrix starting from 1, shift by -1.
- Ignore ex and mk files from git.
- A possible bug: test.ex, problem 14, W-cycle?
- Update webpage setting.
- Update webpage and documentation.

05/16/2020 FASP 2.5.2:
- Add VS19 solution.
- Fix encoding warning in VS19.
- Fix problems with Intel compiler 2020.1 version.

05/07/2020 FASP 2.5.1:
- Fix UMFPACK test run problem.
- Fix METIS module.
- Fix CHOLMOD module.
- Add general cycling type on each level.

01/20/2020 FASP 2.5.0:
- Migrate from BitBucket to GitHub!

01/20/2020 FASP 2.2.0:
- Update cmake behavoir due to cmake changes since 3.14.1.
- Test new version on OS X 10.14.6, RedHat 4.8.5; need more tests.
- Fix warnings for fscanf in Ubuntu.
- Update webpage, documentation, and user guide.
- Fix a mistake in User Guide.
- Update Fortran wrapper for direct solver.

01/26/2019 FASP 2.1.1:
- Find a problem when users try to free precond_data.